--- a/style/register.css
+++ b/style/register.css
@@ -2,7 +2,7 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
-    font-family: 'Inter' !important;
+    font-family: 'Inter';
 } */
 
 #warning-email {
@@ -24,8 +24,8 @@
     align-items: center;
     justify-content: center;
     height: 630px;
-    box-shadow: 0px 0px 14px 3px rgba(0, 0, 0, 0.04) !important;
-    border-radius: 30px !important;
+    box-shadow: 0px 0px 14px 3px rgba(0, 0, 0, 0.04);
+    border-radius: 30px;
     width: 600px;
     padding: 48px 88px;
     position: relative;
@@ -45,12 +45,12 @@
 }
 
 /* .button {
-    background-color: var(--main-color) !important;
-    color: var(--text-white) !important;
+    background-color: var(--main-color);
+    color: var(--text-white);
 }
 
 .button:hover {
-    background-color: var(--headline) !important;
+    background-color: var(--headline);
 } */
 
 
@@ -66,7 +66,7 @@
     background-color: var(--text-white);
     border: 1px solid var(--border-grey);
     border-radius: 10px;
-    margin-top: 24px !important;
+    margin-top: 24px;
     padding: 12px 21px;
 }
 
@@ -89,7 +89,7 @@
 }
 
 .register-checkbox-container a:hover {
-    text-decoration: underline !important;
+    text-decoration: underline;
 }
 
 .register-checkbox-container {
@@ -167,7 +167,7 @@
 } */
 
 .d-none {
-    display: none !important;
+    display: none;
 }
 @media (max-width: 900px){
     .dialog-sign-up {
@@ -178,7 +178,7 @@
 @media (max-width: 768px) {
 
     .fontSize61 {
-        font-size: 47 !important;
+        font-size: 47;
     }
 
     .dialog-sign-up {
@@ -189,11 +189,11 @@
         width: 180px;
         height: 21px;
         padding: 0;
-        margin-bottom: 16px !important;
+        margin-bottom: 16px;
     }
 
     .register-checkbox-container {
-        margin: 38px 0 32px !important;
+        margin: 38px 0 32px;
     }
 
     #mobile_backarrow_id {
@@ -226,7 +226,7 @@
 
 @media (max-height: 900px) {
     .dialog-sign-up {
-        margin-top: 5px !important;
+        margin-top: 5px;
         padding: 32px 16px;
         /* width: auto; */
     }
@@ -243,7 +243,7 @@
 
 @media (max-height: 700px) {
     .fontSize61 {
-        font-size: 34px !important;
+        font-size: 34px;
     }
 
     #mobile_backarrow_id {
@@ -255,7 +255,7 @@
     #register_name,
     #login_password,
     #register_email {
-        font-size: 14px !important;
+        font-size: 14px;
     }
 
     .dialog-sign-up {
