--- a/style/style.css
+++ b/style/style.css
@@ -50,7 +50,7 @@
     border: 1px solid var(--light-blue);
 }
 
-.btn {
+.button {
     display: flex;
     justify-content: center;
     align-items: center;
