--- a/style/fonts.css
+++ b/style/fonts.css
@@ -158,3 +158,15 @@
     src: url('../fonts/inter-v13-latin-900.woff2') format('woff2');
     /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
+
+/* @media (max-width: 768px){
+    .fontSize20 {
+        font-size: 17px;
+    }
+} */
+
+@media (max-width: 400px){
+    .fontSize20 {
+        font-size: 16px;
+    }
+}
