--- a/style/contacts-add-contact.css
+++ b/style/contacts-add-contact.css
@@ -57,7 +57,9 @@
     z-index: 3;
     background: rgba(0, 0, 0, 0.4);
 }
-
+#close_popup_mobile{
+    display: none;
+}
 .addContactPopup {
     /* width: 1212px; */
     height: 592px;
