--- a/style/contacts-media-query.css
+++ b/style/contacts-media-query.css
@@ -47,6 +47,10 @@
          display: none !important;
      }
 
+     #close_popup {
+         display: none;
+     }
+
      #close_popup_mobile {
          width: 100%;
          display: flex;
@@ -68,11 +72,11 @@
          border-bottom-left-radius: 0 !important;
          height: calc(100vh * 0.4) !important;
          width: 600px !important;
-         padding: 66px 24px !important;
+         padding: 24px 24px 0px 24px;
      }
 
      .rightSidePopup {
-         padding: 0px 24px 66px 24px;
+         padding: 0px 24px 24px 24px;
          flex-direction: column;
          align-items: center !important;
          justify-content: center !important;
@@ -89,7 +93,7 @@
          height: auto !important;
          margin: 0 !important;
          align-items: center !important;
-         width: 90% !important;
+         width: 450px !important;
          gap: 15px !important;
      }
 
@@ -314,13 +318,13 @@
      }
  }
 
- @media (max-width: 450px) {
-     .addContactButtonContainer {
-         gap: 12px;
-     }
-
+ @media (max-width: 550px) {
      .contactInfo {
          width: 100% !important;
+     }
+
+     .addContactButtonContainer {
+         gap: 12px;
      }
  }
 
