--- a/style/addTask.css
+++ b/style/addTask.css
@@ -170,7 +170,7 @@ textarea:focus {
 
 .mySelect {
     appearance: none;
-    background: url('../img/arrow_drop_downaa.svg') no-repeat right center;
+    background: url('../img/arrow-down.svg') no-repeat right center;
     background-position-x: calc(97%) !important;
     border-radius: 5px;
     border: 1px solid #D1D1D1;
